<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jebm.sipe.ClienteActivity"
    android:background="@color/Negro"
    android:touchscreenBlocksFocus="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:id="@+id/viewTextDocume"
                android:text="@string/TextLabelTipoDocu"
                android:layout_column="0"
                android:singleLine="true" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/spnTipoDocu"
                    android:layout_column="0"
                    android:spinnerMode="dropdown"/>
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextDocume"
                    android:hint="@string/TextCliente"
                    android:layout_column="0"
                    android:layout_span="6" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextNombre1"
                    android:hint="@string/Nombre1"
                    android:layout_column="0" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextNombre2"
                    android:hint="@string/Nombre2"
                    android:layout_column="0" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextApellido1"
                    android:hint="@string/Apellido1"
                    android:layout_column="0" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextApellido2"
                    android:hint="@string/Apellido2"
                    android:layout_column="0" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextDireccion"
                    android:hint="@string/Direccion"
                    android:layout_column="0" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editTextTelefono"
                    android:hint="@string/Telefono"
                    android:layout_column="0" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/viewTextCiudad"
                    android:text="@string/TextLabelCiudad"
                    android:layout_column="0"
                    android:singleLine="true"
                    android:layout_span="6" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spnCiudad"
                    android:layout_column="0"
                    android:spinnerMode="dropdown"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textobtnGuardar"
                    android:id="@+id/buttonAceptar"
                    android:onClick="btnGuardar_OnClick"
                    android:layout_column="0" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>
