<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jebm.sipe.ConsClienteActivity"
    android:touchscreenBlocksFocus="false">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/BuscarClienes"
                android:id="@+id/textViewBuscarCliente"
                android:layout_column="5"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTextBuscarCli"
                android:layout_column="0"
                android:hint="@string/BuscarCliente" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BuscarClienes"
                android:id="@+id/btnBuscar"
                android:layout_column="0"
                android:onClick="btnBuscar_onClick" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddCliente"
                android:id="@+id/btnAdicionarClente"
                android:onClick="btnAddClente_onClick" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lvClientes"
                android:layout_column="0"
                android:stackFromBottom="false" />

        </TableRow>
    </TableLayout>
</RelativeLayout>
